# pmr

./: Cargo.toml  README.md  run_large_scale_tests.sh  run_tests.sh  test_serve_daemon.sh  test_zombie_fix.sh
src/: api.rs  cli.rs  config.rs  database.rs  error.rs  formatter.rs  lib.rs  lock.rs  log_rotation.rs  logger.rs  main.rs  manager.rs  process.rs  storage.rs
src/api/: auth.rs  docs.rs  handlers.rs  server.rs
tests/: api_tests.rs  clear_tests.rs  cli_tests.rs  database_tests.rs  end_to_end_tests.rs  integration_tests.rs  large_scale_tests.rs  performance_tests.rs  stress_tests.rs
