[package]
name = "pmr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.27", features = ["process", "signal"] }
anyhow = "1.0"
dirs = "5.0"
fs2 = "0.4"
