[package]
name = "pmr"
version = "0.1.0"
edition = "2021"
authors = ["ArlenWen"]
license = "MIT"
description = "A command-line process management tool written in Rust with system-level process management, isolated environment variables, and concurrent operations support."
repository = "https://github.com/ArlenWen/pmr"
keywords = ["process", "management", "cli", "system", "daemon"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
libc = "0.2.174"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"

