[package]
name = "pmr"
version = "0.3.0"
edition = "2021"
authors = ["ArlenWen"]
license = "MIT"
description = "A command-line process management tool written in Rust with system-level process management, isolated environment variables, and concurrent operations support."
repository = "https://github.com/ArlenWen/pmr"
keywords = ["process", "management", "cli", "system", "daemon"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
http-api = ["axum", "tower", "tower-http", "base64", "rand", "utoipa", "utoipa-swagger-ui"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
libc = "0.2.174"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }

# HTTP API dependencies (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
utoipa = { version = "4.2", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "6.0", features = ["axum"], optional = true }

[dev-dependencies]
tempfile = "3.8"

